# image-rename

./: README.md  main.py  pyproject.toml
caption_func/: __init__.py  cli.py  general.py  main_functions.py
