[project]
name = "image-rename"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-vision>=3.10.2",
    "google-genai>=1.43.0",
    "google-generativeai>=0.8.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pd>=0.0.4",
    "pillow>=11.3.0",
    "pillow-heif>=1.1.1",
    "rich>=14.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.44",
]

[project.scripts]
image-rename = "caption_func.cli:main"

[tool.setuptools.packages.find]
include = ["caption_func"]
