[project]
name = "image-rename"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.44",
]

[project.scripts]
image-rename = "caption_func.cli:main"

[tool.setuptools.packages.find]
include = ["caption_func"]
